<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.sunnysyed.avant.activities.LoginActivity">

    <ImageView
        android:layout_width="215dp"
        android:layout_height="54dp"
        android:src="@drawable/logo_text"
        android:id="@+id/logo"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"/>
    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:background="@android:color/transparent"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="20dp"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:background="@android:color/transparent"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="10dp"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:orientation="vertical"
            android:gravity="center"
            android:onClick="signUp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:id="@+id/textView14"
                android:textColor="@android:color/darker_gray"
                android:textAppearance="@style/Bold"
                android:layout_gravity="center"
                android:textSize="14sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:id="@+id/textView114"
                android:layout_gravity="center"
                android:textColor="@android:color/darker_gray"
                android:textAppearance="@style/Bold"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@color/colorAccent"
            android:onClick="logIn">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:id="@+id/textView4"
                android:layout_centerInParent="true"
                android:textColor="@android:color/white"
                android:textAppearance="@style/Bold"
                android:textSize="17sp" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
